tests/language_tests/pass/0049_simple_if_print.ee
fn main() {
    if (4 > 3) {
        print(5);
    }
}