tests/language_tests/fail/0028_unknown_variable_in_if_condition.ee
fn main() {
    if (missing) {
        print(1);
    }
}
